native-image work, bug fixes